--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,26 @@
 }
 html {
   font-size: 16px;
+  font-family: 'Ysabeau', sans-serif;
 }
-header {
+  header {
     color: #FFFFFF;
     background-color: #8B77C1;
     /*padding: 80px 0;*/
     text-align: center;
+}
+header div.header {
+  place-content: flex-start;
+}
+
+header div.header nav {
+  width: 70%;
+  display: flex;
+  place-content: space-between;
+}
+
+#menu, #menu-check {
+  display: none;
 }
 section {
     padding: 40px 0;
@@ -23,6 +37,7 @@ section {
     background: #549DA0;
     color: #000000;
 }*/
+
 footer {
     background: #8B77C1;
     padding: 32px 0;
@@ -37,16 +52,17 @@ footer {
     max-width: 900px;*/
 }
 h1 {
-    font-size:3rem;
+  font-size:3rem;
 	text-align: center;
-    margin: 20px 0 5px 20px;
+  margin: 20px 0 5px 20px;
 	color: #8B77C1;
 }
 h2 {
     /*font-weight: 300;*/
-    font-size: 1.5rem;
+    font-size: 2rem;
     margin: 20px 0 5px 20px;
-	color: #8B77C1;
+	  color: #8B77C1;
+    text-align: center;
 }
 .imag {
 	size: 50%;
@@ -65,10 +81,31 @@ h2 {
     border-radius: 5px;
     padding: 12px 16px;
     cursor: pointer;
-	text-decoration: none;
+	  text-decoration: none;
 }
 .btn:hover {
     background: #615187;
+}
+nav{
+  width: 100%;
+  height: 15vh;
+}
+ul, ol {
+  list-style: none;
+}
+.nav > li{
+  /*float: center;*/
+  /*position: relative;*/
+  display: inline-block;
+}
+
+.nav li ul {
+  display:none;
+  position: absolute;
+}
+
+.nav li:hover > ul {
+  display: block;
 }
 /*.submenu {
     left: 50%;
@@ -123,7 +160,7 @@ blockquote cite:before {
 }
    FIN SECTION QUOTE*/
 
-/*Estilos Pagina Reservas*/
+   /*Estilos Pagina Reservas*/
 
 
 .booking {
@@ -263,24 +300,98 @@ blockquote cite:before {
   transition: all 0.3s ease;
 }
 
-/*FOOTER*/
-footer {
-  background: #8B77C1;
-  padding: 32px 0;
-  text-align: center;
+/*PAGINA INDEX*/
+.position {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.slider {
+  background-image: url(slider1.jpg);
+  background-size: cover;
+  height: 50%;
+  width: 50%;
+  border-radius: 10px;
+  animation: animate 10s infinite;
+}
+
+@keyframes animate {
+  20%{
+    background-image: url(slider5.jpg);
+    background-size: cover;
+  }
+  40%{
+    background-image: url(slider4.jpg);
+    background-size: cover;
+  }
+  60%{
+    background-image: url(slider3.jpg);
+    background-size: cover;
+  }
+  80%{
+    background-image: url(slider2.jpg);
+    background-size: cover;
+  }
+  100%{
+    background-image: url(slider1.jpg);
+    background-size: cover;
+  }
+}
+
+/*INICIO FORMULARIO CONTACTO*/
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: white;
+  border: 3px solid #7E6EA7;
+  border-radius: 5px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #cccccc;
+  border-radius: 5px;
+}
+
+input[type="submit"] {
+  padding: 10px;
+  background-color: #7E6EA7;
   color: #ffffff;
-  font-size: 12px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.pie {
-  text-align: center;
+input[type="submit"]:hover {
+  background-color: #615187;
 }
 
-/*Fin de Rservas/*
+input[type="reset"] {
+  padding: 10px;
+  background-color: #7E6EA7;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-
-
-
+input[type="reset"]:hover {
+  background-color: #615187;
+}
+/*FIN FORMULARIO CONTACTO*/
 
 /*FOOTER*/
 footer {
@@ -296,9 +407,50 @@ footer {
 /*FIN FOOTER*/
 
 /*RESPONSIVE*/
+@media only screen and (max-width: 900px) {
+  header div.header, header div.header ul, header div.header ul li {
+  display: inline;}
+
+  header div.header nav {
+    width: 100%;
+    display: inline;
+  }
+}
+@media only screen and (max-width: 700px) {
+  #menu-check:not(:checked) ~ nav {
+    display: none;
+  }
+
+  #menu-check:checked ~ nav {
+    display: block;
+  }
+
+  #menu {
+    display: block;
+    font-size: 1.2em;
+    font-weight: bold;
+    border: 3px solid var(--color-1);
+    border-radius: 0.3em;
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+  }
+
+  #menu-cerrar {
+    display: none;
+  }
+
+  #menu-check:checked ~ label #menu-abrir {
+    display: none;
+  }
+
+  #menu-check:checked ~ label #menu-cerrar {
+    display: block;
+  }
+}
 @media screen and (min-width: 480px) and (max-width: 1024px) {
   body {
-    background-color: blue;
+    background-color: white;
   }
 }
 
