--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ blockquote cite:before {
 .booking .formContent .input {
   margin-bottom: 15px;
   width: calc(100% / 2 - 20px);
-  padding: 10px;
+  /*padding: 10px;*/
 }
 
 .booking .formContent .input span {
