--- a/css/style.css
+++ b/css/style.css
@@ -162,26 +162,21 @@ blockquote cite:before {
 
    /*Estilos Pagina Reservas*/
 
-
 .booking {
   display: flex;
-
   padding: 10px;
   align-items: center;
   justify-content: center;
 }
 
 .booking .formContent {
-
   max-width: 700px;
   width: 100%;
-
   background-color: rgb(194, 170, 216);
   border-radius: 5px;
   box-shadow: 10px 5px 5px #7E6EA7;
   font-size: 1.25rem;
   align-items: center;
-
 }
 
 .booking .formContent .personalInput {
@@ -196,7 +191,7 @@ blockquote cite:before {
 .booking .formContent .input {
   margin-bottom: 15px;
   width: calc(100% / 2 - 20px);
-  /*padding: 10px;*/
+  padding: 10px;
 }
 
 .booking .formContent .input span {
@@ -221,12 +216,9 @@ blockquote cite:before {
 .booking .formContent .genderInput {
   padding: 10px;
   align-items: center;  
-  
 }
 
 .booking .formContent .genderInput .genderTitle{
-  
-  
   margin-bottom: 5px;
 }
 
@@ -237,7 +229,6 @@ blockquote cite:before {
 .booking .formContent .genderInput .genderOption label{
   margin-right: 15px;
   font-size: 1.15rem;
-  
 }
 
 .booking .formContent .contactInput {
@@ -309,7 +300,7 @@ blockquote cite:before {
 }
 
 .slider {
-  background-image: url(slider1.jpg);
+  background-image: url(1.jpg);
   background-size: cover;
   height: 50%;
   width: 50%;
@@ -338,7 +329,7 @@ blockquote cite:before {
     background-image: url(slider1.jpg);
     background-size: cover;
   }
-}
+}*/
 
 /*INICIO FORMULARIO CONTACTO*/
 form {
