--- a/css/reservas.css
+++ b/css/reservas.css
@@ -295,3 +295,102 @@ footer {
   text-align: center;
   color: #868686;
 }
+
+/*RESPONSIVE*/
+@media only screen and (max-width: 900px) {
+  header div.header, header div.header ul, header div.header ul li {
+  display: inline;}
+
+  header div.header nav {
+    width: 100%;
+    display: inline;
+  }
+}
+@media only screen and (max-width: 700px) {
+  #menu-check:not(:checked) ~ nav {
+    display: none;
+  }
+
+  #menu-check:checked ~ nav {
+    display: block;
+  }
+
+  #menu {
+    display: block;
+    font-size: 1.2em;
+    font-weight: bold;
+    border: 3px solid var(--color-1);
+    border-radius: 0.3em;
+    position: absolute;
+    right: 0.5em;
+    top: 0.5em;
+  }
+
+  #menu-cerrar {
+    display: none;
+  }
+
+  #menu-check:checked ~ label #menu-abrir {
+    display: none;
+  }
+
+  #menu-check:checked ~ label #menu-cerrar {
+    display: block;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 1024px) {
+  body {
+    background-color: white;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .btn {
+    display: block;
+    font-size: 18px;
+  }
+  .submenu {
+    width: 100%;
+    position: relative;
+  }
+  h1 {
+    font-size: 32px;
+  }
+  h2 {
+    font-size: 18px;    
+  }
+  section {
+    padding: 25px 0 15px 0;
+  }
+  .feature {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    margin: 0 0 10px 0;
+    font-size: 16px;
+  }
+  .feature img {
+    width: 15%;
+    min-width: 60px;
+    margin-right: 20px;
+  }
+  .quote {
+    padding: 30px 0;
+  }
+  blockquote p {
+    font-size: 18px;
+  }
+  blockquote cite {
+    font-size: 14px;
+  }
+  footer {
+    padding: 30px 0 10px 0;
+  }
+  footer li {
+    display: block;
+    margin: 5px 0;
+  }
+}
+/*FIN RESPONSIVE*/
