--- a/css/style2.css
+++ b/css/style2.css
@@ -1,16 +1,19 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
+
 html {
   font-size: 16px;
   font-family: 'Ysabeau', sans-serif;
 }
-  header {
-    color: #FFFFFF;
-    background-color: #8B77C1;
-    text-align: center;
+
+header {
+  color: #FFFFFF;
+  background-color: #8B77C1;
+  text-align: center;
 }
+
 header div.header {
   place-content: flex-start;
 }
@@ -21,105 +24,107 @@ header div.header nav {
   place-content: space-between;
 }
 
-#menu, #menu-check {
+#menu,
+#menu-check {
   display: none;
 }
+
 section {
-    padding: 40px 0;
-    text-align: center;
+  padding: 40px 0;
+  text-align: center;
 }
 
 footer {
-    background: #8B77C1;
-    padding: 32px 0;
-    text-align: center;
-    color: #868686;
+  background: #8B77C1;
+  padding: 32px 0;
+  text-align: center;
+  color: #868686;
 }
 
-  /*HEADER*/
+/*HEADER*/
 .container {
-    margin:0 auto;
-    /*padding: 0 20px 0 20px;
+  margin: 0 auto;
+  /*padding: 0 20px 0 20px;
     max-width: 900px;*/
 }
+
 h1 {
-  font-size:3rem;
-	text-align: center;
+  font-size: 3rem;
+  text-align: center;
   margin: 20px 0 5px 20px;
-	color: #8B77C1;
+  color: #8B77C1;
 }
+
 h2 {
-    /*font-weight: 300;*/
-    font-size: 2rem;
-    margin: 20px 0 5px 20px;
-	  color: #8B77C1;
-    text-align: center;
+  /*font-weight: 300;*/
+  font-size: 2rem;
+  margin: 20px 0 5px 20px;
+  color: #8B77C1;
+  text-align: center;
 }
+
 .imag {
   size: 50%;
 
 }
+
 .texto {
-	margin: 0 10px 10px 10px;
-	text-align: justify;
-}
-.btn {
-    display: inline-block;
-    color: white;
-    font-weight: 500;
-    font-size: 1.25rem;
-    background: #7E6EA7;
-    border: none;
-    border-radius: 5px;
-    padding: 12px 16px;
-    cursor: pointer;
-	  text-decoration: none;
-}
-.btn:hover {
-    background: #615187;
-}
-parrafo2{
-  place-content: flex-start;
-}
-.btn1 {
-   
-    margin: 10px;
-    display: inline-block;
-    color: white;
-    
-    font-weight: 500;
-    font-size: .5 rem;
-    background: #7E6EA7;
-    border: none;
-    border-radius: 5px;
-    padding: 12px 16px;
-    cursor: pointer;
-	  text-decoration:none; 
-}
-.btn1:hover {
-    background: #eedd41;
-    color:black
+  margin: 0 10px 10px 10px;
+  text-align: justify;
 }
 
-.img1 {
-  
-  padding:1x;
-  width:294px;
-  height:333px;
-   
+.btn {
+  display: inline-block;
+  color: white;
+  font-weight: 500;
+  font-size: 1.25rem;
+  background: #7E6EA7;
+  border: none;
+  border-radius: 5px;
+  padding: 12px 16px;
+  cursor: pointer;
+  text-decoration: none;
 }
-.vid1{
-   
-    padding: 22px;
-}  
-.mapouter{
-  display:inline-block;
+
+.btn:hover {
+  background: #615187;
+}
+
+parrafo2 {
+  place-content: flex-start;
+}
+
+.btn1 {
+
+  margin: 10px;
+  display: inline-block;
+  color: white;
+
+  font-weight: 500;
+  font-size: .5 rem;
+  background: #7E6EA7;
+  border: none;
+  border-radius: 5px;
+  padding: 12px 16px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.btn1:hover {
+  background: #eedd41;
+  color: black
+}
+
+
+.mapouter {
+  display: inline-block;
   position: relative;
   text-align: center;
   height: 240px;
   width: 100%;
 
 }
+
 .maputer>.gmap_canvas {
   overflow: hidden;
   background: none !important;
@@ -127,26 +132,29 @@ parrafo2{
   width: 378px;
 }
 
-nav{
+nav {
   width: 100%;
   height: 15vh;
   text-align: center;
 }
-ul, ol {
+
+ul,
+ol {
   list-style: none;
 }
-.nav > li{
+
+.nav>li {
   /*float: center;*/
   /*position: relative;*/
   display: inline-block;
 }
 
 .nav li ul {
-  display:none;
+  display: none;
   position: absolute;
 }
 
-.nav li:hover > ul {
+.nav li:hover>ul {
   display: block;
 }
 
@@ -158,13 +166,15 @@ footer {
   color: #ffffff;
   font-size: 12px;
 }
+
 .pie {
-	text-align: center;
+  text-align: center;
 }
+
 /*FIN FOOTER*/
 
 /*RESPONSIVE*/
-@media only screen and (max-width: 900px) {
+/*@media only screen and (max-width: 900px) {
   header div.header, header div.header ul, header div.header ul li {
   display: inline;}
 
@@ -172,13 +182,101 @@ footer {
     width: 100%;
     display: inline;
   }
+}*/
+/*de ricardo*/
+#container {
+  height: 220px;
+  width: 100%;
+  border: solid black 1px;
+  display: flex;
+  flex-wrap: nowrap;
+  place-content: space-evenly;
+  align-items: center;
+
 }
+
+#caja {
+  width: 20%;
+  height: 190px;
+  /*margin: 2px;*/
+  background-color: coral;
+}
+
+#im1 {
+  width: 100%;
+  height: 100%;
+}
+
+#container1 {
+  height: 220px;
+  width: 100%;
+  border: solid black 1px;
+  display: flex;
+  flex-wrap: nowrap;
+  place-content: space-evenly;
+  align-items: center;
+}
+
+
+
+#vid1 {
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width:694px) {
+
+
+  #container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 2500px;
+
+    flex-wrap: nowrap;
+    place-content: space-around;
+    align-items: space-around;
+
+  }
+
+  #container1 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 1000px;
+
+    flex-wrap: nowrap;
+    /*place-content: space-around;*/
+    /*align-items: space-around;*/
+
+  }
+
+  #caja {
+    width: 70%;
+    height: 50%;
+    margin: 2px;
+    background-color: green;
+  }
+
+}
+
+#vid1 {
+  width: 100%;
+  height: 100%;
+
+}
+
+
+
+/*fin dericardo*/
+
+
 @media only screen and (max-width: 700px) {
-  #menu-check:not(:checked) ~ nav {
+  #menu-check:not(:checked)~nav {
     display: none;
   }
 
-  #menu-check:checked ~ nav {
+  #menu-check:checked~nav {
     display: block;
   }
 
@@ -197,14 +295,15 @@ footer {
     display: none;
   }
 
-  #menu-check:checked ~ label #menu-abrir {
+  #menu-check:checked~label #menu-abrir {
     display: none;
   }
 
-  #menu-check:checked ~ label #menu-cerrar {
+  #menu-check:checked~label #menu-cerrar {
     display: block;
   }
 }
+
 @media screen and (min-width: 480px) and (max-width: 1024px) {
   body {
     background-color: white;
@@ -216,19 +315,24 @@ footer {
     display: block;
     font-size: 18px;
   }
+
   .submenu {
     width: 100%;
     position: relative;
   }
+
   h1 {
     font-size: 32px;
   }
+
   h2 {
-    font-size: 18px;    
+    font-size: 18px;
   }
+
   section {
     padding: 25px 0 15px 0;
   }
+
   .feature {
     width: 100%;
     display: flex;
@@ -238,26 +342,33 @@ footer {
     margin: 0 0 10px 0;
     font-size: 16px;
   }
+
   .feature img {
     width: 15%;
     min-width: 60px;
     margin-right: 20px;
   }
+
   .quote {
     padding: 30px 0;
   }
+
   blockquote p {
     font-size: 18px;
   }
+
   blockquote cite {
     font-size: 14px;
   }
-  footer {
+
+  */ footer {
     padding: 30px 0 10px 0;
   }
+
   footer li {
     display: block;
     margin: 5px 0;
   }
 }
+
 /*FIN RESPONSIVE*/
