--- a/css/contacto.css
+++ b/css/contacto.css
@@ -388,6 +388,33 @@ input[type="reset"]:hover {
   background-color: #615187;
 }
 
+.icons {
+  display: flex;
+   margin: 20px 0;
+   justify-content: center;
+   
+}
+
+.icons a {
+   display: flex;
+    text-decoration: none;
+    position: sticky;
+    color: #615187;
+    justify-content: center;
+    /*border-radius: 50%;*/
+    width: 30px;
+    height: 30px;
+    line-height: 40px;
+    margin: 0 5px;
+    transition: .3s;
+}
+
+.icons a i {
+  width: 35px;
+  height: auto;
+  font-size: 30px;
+}
+
 /*transformación*/
 
   #mapas {
