--- a/css/style2.css
+++ b/css/style2.css
@@ -369,6 +369,12 @@ footer {
     display: block;
     margin: 5px 0;
   }
+
+  .container2 nav {
+    width: 100%;
+    height: 200px;
+    text-align: center;
+  }
 }
 
 /*FIN RESPONSIVE*/
