--- a/css/style2.css
+++ b/css/style2.css
@@ -132,9 +132,9 @@ parrafo2 {
   width: 378px;
 }
 
-nav {
+.container2 nav {
   width: 100%;
-  height: 15vh;
+  height: 150px;
   text-align: center;
 }
 
