--- a/css/style2.css
+++ b/css/style2.css
@@ -206,7 +206,12 @@ footer {
   width: 100%;
   height: 100%;
 }
-
+.lista {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  place-content: center;
+}
 #container1 {
   height: 220px;
   width: 100%;
@@ -216,14 +221,52 @@ footer {
   place-content: space-evenly;
   align-items: center;
 }
-
+#caja5 {
+  display: flex;
+  flex-direction: row;
+  place-content: space-evenly;
+  width: 100%;
+  height: 10%;
+  
+}
 
 
 #vid1 {
   width: 100%;
   height: 100%;
 }
+@media only screen and (max-width: 800px) and (min-width: 420px){
+  #caja5 {
+    display: flex;
+    flex-direction: row;
+    place-content: space-evenly;
+    width: 100%;
+    height: 150px;}
+    
 
+
+}
+@media only screen and (max-width: 419px) and (min-width: 300px){
+  #caja5 {
+    display: flex;
+    flex-direction: row;
+    place-content: space-evenly;
+    width: 100%;
+    height: 200px;}
+   
+
+
+}
+@media only screen and (max-width: 299px) {
+  #caja5 {
+    display: flex;
+    flex-direction: row;
+    place-content: space-evenly;
+    width: 100%;
+    height: 400px;
+  }
+
+}
 @media (max-width:694px) {
 
 
