TPO parte 2 iventario de productos

--- a/css/reservas.css
+++ b/css/reservas.css
@@ -1,7 +1,3 @@
-
-
-
-
 /*Estilos Pagina Reservas*/
 
 .booking {
@@ -19,6 +15,15 @@
   box-shadow: 10px 5px 5px #7E6EA7;
   font-size: 1.25rem;
   align-items: center;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.booking .formContent .formAdding {
+  margin-bottom: 10px;
+  align-items: center;
+  padding-left: 50px;
 }
 
 .booking .formContent .personalInput {
@@ -120,7 +125,7 @@
   align-items: end;
   margin: 0 10px 20px 0;
   padding: 10px;
-  }
+}
 
 .booking .formContent .buttonArea .button {
   height: 35px;
@@ -132,7 +137,7 @@
   border-bottom-width: 2px;
   transition: all 0.3s ease;
   margin: 3px;
-  
+
 }
 
 .booking .formContent #errorMessage {
@@ -190,20 +195,25 @@ footer {
 
 /*RESPONSIVE*/
 @media only screen and (max-width: 900px) {
-  header div.header, header div.header ul, header div.header ul li {
-  display: inline;}
+
+  header div.header,
+  header div.header ul,
+  header div.header ul li {
+    display: inline;
+  }
 
   header div.header nav {
     width: 100%;
     display: inline;
   }
 }
+
 @media only screen and (max-width: 700px) {
-  #menu-check:not(:checked) ~ nav {
+  #menu-check:not(:checked)~nav {
     display: none;
   }
 
-  #menu-check:checked ~ nav {
+  #menu-check:checked~nav {
     display: block;
   }
 
@@ -222,14 +232,15 @@ footer {
     display: none;
   }
 
-  #menu-check:checked ~ label #menu-abrir {
+  #menu-check:checked~label #menu-abrir {
     display: none;
   }
 
-  #menu-check:checked ~ label #menu-cerrar {
+  #menu-check:checked~label #menu-cerrar {
     display: block;
   }
 }
+
 @media screen and (min-width: 480px) and (max-width: 1024px) {
   body {
     background-color: white;
@@ -241,19 +252,24 @@ footer {
     display: block;
     font-size: 18px;
   }
+
   .submenu {
     width: 100%;
     position: relative;
   }
+
   h1 {
     font-size: 32px;
   }
+
   h2 {
-    font-size: 18px;    
+    font-size: 18px;
   }
+
   section {
     padding: 25px 0 15px 0;
   }
+
   .feature {
     width: 100%;
     display: flex;
@@ -263,29 +279,35 @@ footer {
     margin: 0 0 10px 0;
     font-size: 16px;
   }
+
   .feature img {
     width: 15%;
     min-width: 60px;
     margin-right: 20px;
   }
+
   .quote {
     padding: 30px 0;
   }
+
   blockquote p {
     font-size: 18px;
   }
+
   blockquote cite {
     font-size: 14px;
   }
+
   footer {
     padding: 30px 0 10px 0;
   }
+
   footer li {
     display: block;
     margin: 5px 0;
   }
 
-  
+
 
   .booking .formContent {
     width: 90%;
@@ -309,20 +331,23 @@ footer {
     margin-left: 10px;
     padding: 10px;
     align-items: center;
-    
+
   }
+
   .booking .formContent .contactInput {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 10px 0 12px 10px;
   }
+
   .booking .formContent .bookingInput {
     display: block;
     flex-wrap: wrap;
     justify-content: center;
     margin: 10px 0 12px 10px;
   }
+
   .booking .formContent .bookingInput .input {
     margin-bottom: 15px;
     width: 90%;
@@ -335,40 +360,41 @@ footer {
     align-items: end;
     margin: 0 10px 20px 0;
     padding: 10px;
-    }
-  
-    .booking .formContent .buttonArea .button {
-      height: 35px;
-      width: 100px;
-      outline: none;
-      font-size: 1rem;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      border-bottom-width: 2px;
-      transition: all 0.3s ease;
-      margin: 3px;
-      
-    }
+  }
 
-    .booking .formContent #errorMessage {
-      display: none;
-      color: red;
-      opacity: 60%;
-      justify-content: center;
-      margin-bottom: 15px;
-      margin-left: 15px;
-      padding: 10px;
-    
-    }
-    
-    .booking .formContent #submitSucces {
-      display: none;
-      color: rgba(30, 89, 250, 0.7);
-      justify-content: center;
-      margin-bottom: 15px;
-      margin-left: 15px;
-      padding: 10px;
-    
-    }
+  .booking .formContent .buttonArea .button {
+    height: 35px;
+    width: 100px;
+    outline: none;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+    margin: 3px;
+
+  }
+
+  .booking .formContent #errorMessage {
+    display: none;
+    color: red;
+    opacity: 60%;
+    justify-content: center;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    padding: 10px;
+
+  }
+
+  .booking .formContent #submitSucces {
+    display: none;
+    color: rgba(30, 89, 250, 0.7);
+    justify-content: center;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    padding: 10px;
+
+  }
 }
+
 /*FIN RESPONSIVE*/
